<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Your existing layout elements -->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="116dp"
            android:fontFamily="sans-serif"
            android:text="@string/dictionary"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#414040"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/id_recent_recyclerView"
            android:layout_width="253dp"
            android:layout_height="381dp"
            android:layout_marginTop="320dp"
            android:paddingStart="0dp"
            android:paddingEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.245"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <EditText
            android:id="@+id/id_TextField"
            android:layout_width="322dp"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="@string/text_field"
            android:background="@drawable/edit_text_background"
            android:backgroundTint="#EBE6E6"
            android:drawableStart="?android:attr/actionModeWebSearchDrawable"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/text_field"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textColor="#636161"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.29" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="272dp"
            android:text="@string/recent"
            android:textColor="#252524"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="273dp"
            android:background="@null"
            android:contentDescription="Delete"
            android:onClick="onDeleteButtonClick"
            android:src="@drawable/baseline_delete_outline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.789"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- More layout elements can be added here -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
